@@ -52,7 +52,7 @@
         AllowOverride All
         # SECTION fcgid BEGIN.
         Options +ExecCGI
-        FCGIWrapper {PHP_STARTER_DIR}/{FCGID_NAME}/php5-fcgid-starter
+        FCGIWrapper {PHP_STARTER_DIR}/{FCGID_NAME}/php-fcgid-starter
         # SECTION fcgid END.
         # SECTION itk BEGIN.
         php_admin_value open_basedir "{HOME_DIR}/:{PEAR_DIR}/{PHPINI_OPEN_BASEDIR}"
