@@ -1,0 +1,7 @@
+#!/bin/sh
+umask 027
+export PHPRC={FCGI_DIR}/php{PHP_VERSION}/
+export PHP_FCGI_MAX_REQUESTS={PHP_FCGI_MAX_REQUESTS}
+export PHP_FCGI_CHILDREN={PHP_FCGI_CHILDREN}
+export TMPDIR={TMPDIR}
+exec {PHP_CGI_BIN} "$@"
